Update module descriptor, fix some compier warnings, clean up
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>